--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" href="images/icon.png" type="images/png">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
-    <link rel="stylesheet" href="css/all.min.css" t ype="text/css">
+    <link rel="stylesheet" href="css/all.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/media.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -37,8 +37,7 @@
                         </li>
 
                         <li class="nav-item dropdown px-3">
-                            <a class="nav-link dropdown-toggle" href="javascript:void(0)" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="javascript:void(0)">
                                 Courses
                             </a>
                             <ul class="dropdown-menu">
@@ -53,8 +52,7 @@
                             <a class="nav-link" href="javascript:void(0)">Short codes</a>
                         </li>
                         <li class="nav-item dropdown px-3">
-                            <a class="nav-link dropdown-toggle" href="./Project.html" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="javascript:void(0)" >
                                 Events
                             </a>
                             <ul class="dropdown-menu">
