--- a/code/event.html
+++ b/code/event.html
@@ -168,7 +168,7 @@
                             <div class="course-eduction-data">
                                 <h6>Tech Innovators Conference</h6>
                                 <p>Tech enthusiasts, don't miss the Tech Innovators Conference in San Francisco. Dive
-                                    into discussions on the latest tech trends, network with industry experts, and gain
+                                    into discussions, network with industry experts, and gain
                                     valuable insights.</p>
                             </div>
                         </div>
@@ -184,7 +184,8 @@
                             <div class="course-eduction-data">
                                 <h6>Astronomy Workshop</h6>
                                 <p>Discover the mysteries of the cosmos at the Astronomy Workshop in Boston. Learn about
-                                    stars, planets, and galaxies, and gaze at the night sky through telescopes.</p>
+                                    stars, planets, and galaxies, on the latest tech trends, and gaze at the night sky
+                                    through telescopes.</p>
                             </div>
                         </div>
                     </div>
@@ -195,6 +196,7 @@
 
 
     <!-- ========================== footer  ========================== -->
+
     <footer>
         <div class="container">
             <div class="footer-data">
@@ -286,9 +288,10 @@
             </div>
         </div>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
