--- a/code/courses.html
+++ b/code/courses.html
@@ -21,41 +21,36 @@
     <header class="container">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand header-logo"><img src="./images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand header-logo"><img src="images/logo.png" alt="" /></a>
+                <button class="navbar-toggler" type="button" id="sidebarToggleBtn">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse col-8" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item px-3">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
 
                         <li class="nav-item dropdown px-3">
-                            <a class="nav-link dropdown-toggle" href="javascript:void(0)" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Courses
-                            </a>
+                            <a class="nav-link dropdown-toggle" href="javascript:void(0)">Courses</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="courses.html">Courses</a></li>
                                 <li>
-                                    <a class="dropdown-item" href="javascript:void(0)">Courses
-                                        Details</a>
+                                    <a class="dropdown-item" href="courses.html">Courses</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="javascript:void(0)">Courses Details</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link" href="javascript:void(0)">Short codes</a>
+                            <a class="nav-link" href="javascript:void(0)">Short Codes</a>
                         </li>
                         <li class="nav-item dropdown px-3">
-                            <a class="nav-link dropdown-toggle" href="./Project.html" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Events
-                            </a>
+                            <a class="nav-link dropdown-toggle" href="javascript:void(0)">Events</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="event.html">Events</a></li>
+                                <li>
+                                    <a class="dropdown-item" href="./Project.html">Events</a>
+                                </li>
                                 <li>
                                     <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
                                 </li>
@@ -65,12 +60,51 @@
                             <a class="nav-link" href="javascript:void(0)">Contact</a>
                         </li>
                     </ul>
-                    </form>
                 </div>
             </div>
         </nav>
     </header>
 
+
+
+    <div class="sidebar" id="sidebar">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+            <a class="navbar-brand header-logo-sidebar"><img src="images/logo.png" alt="" /></a>
+
+            <li class="nav-item px-3">
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+
+            <li class="nav-item dropdown px-3">
+                <a class="nav-link dropdown-toggle" href="javascript:void(0)">Courses</a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="courses.html">Courses</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="javascript:void(0)">Courses Details</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item px-3">
+                <a class="nav-link" href="javascript:void(0)">Short Codes</a>
+            </li>
+            <li class="nav-item dropdown px-3">
+                <a class="nav-link dropdown-toggle" href="javascript:void(0)">Events</a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="./Project.html">Events</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item px-3">
+                <a class="nav-link" href="javascript:void(0)">Contact</a>
+            </li>
+        </ul>
+    </div>
 
 
     <!-- ===============banner=============== -->
@@ -282,6 +316,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script>
+        var sidebar = document.getElementById("sidebar");
+        var sidebarToggleBtn = document.getElementById("sidebarToggleBtn");
+
+        sidebarToggleBtn.addEventListener("click", function () {
+            sidebar.classList.toggle("show");
+        });
+    </script>
 </body>
 
 </html>
