--- a/code/index.html
+++ b/code/index.html
@@ -52,7 +52,7 @@
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)">Events</a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="./Project.html">Events</a>
+                                    <a class="dropdown-item" href="event.html">Events</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
@@ -96,7 +96,7 @@
                 <a class="nav-link dropdown-toggle" href="javascript:void(0)">Events</a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a class="dropdown-item" href="./Project.html">Events</a>
+                        <a class="dropdown-item" href="event.html">Events</a>
                     </li>
                     <li>
                         <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
