--- a/code/courses.html
+++ b/code/courses.html
@@ -49,7 +49,7 @@
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)">Events</a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="./Project.html">Events</a>
+                                    <a class="dropdown-item" href="event.html">Events</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
@@ -93,7 +93,7 @@
                 <a class="nav-link dropdown-toggle" href="javascript:void(0)">Events</a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a class="dropdown-item" href="./Project.html">Events</a>
+                        <a class="dropdown-item" href="event.html">Events</a>
                     </li>
                     <li>
                         <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
