--- a/code/courses.html
+++ b/code/courses.html
@@ -181,7 +181,7 @@
                                 </div>
                                 <div class="course-eduction-data">
                                     <h6>Artificial Intelligence 101</h6>
-                                    <p>Introduction to AI and its applications in the real world.</p>
+                                    <p>Introduction to AI and its applications in the real world. AI is Useful too.</p>
                                 </div>
                             </div>
                         </div>
