--- a/code/event.html
+++ b/code/event.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <link rel="stylesheet" href="css/all.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/media.css" type="text/css">
 
     <title>Events | school management</title>
 </head>
@@ -64,8 +65,6 @@
         </nav>
     </header>
 
-
-
     <div class="sidebar" id="sidebar">
         <ul class="navbar-nav mb-2 mb-lg-0">
             <a class="navbar-brand header-logo-sidebar"><img src="images/logo.png" alt="" /></a>
@@ -108,13 +107,13 @@
 
 
     <!-- ===============banner=============== -->
-    <div class="course-img">
+    <div class="event-img">
         <img src="images/courses.png" alt="banner">
     </div>
 
-    <section class="course-banner">
+    <section class="event-banner">
         <div class="container">
-            <div class="course-data">
+            <div class="event-data">
                 <h2>Events</h2>
                 <p>Home / <span>Events</span></p>
             </div>
@@ -123,104 +122,113 @@
 
 
     <!-- =========course-eduction============= -->
-    <section class="course-eduction">
+    <section class="event-eduction">
         <div class="container">
-            <div class="course-eduction-heading">
+            <div class="event-eduction-heading">
                 <h6>OUR UPCOMING EVENTS</h6>
                 <h3>Complete About Students Advance Course.</h3>
             </div>
 
-            <div class="row">
-                <div class="col-4">
-                    <div class="course-eduction-padding">
-                        <div class="course-eduction-card">
-                            <div class="course-eduction-img">
-                                <img src="images/event1.png" alt="portfolio2">
-                            </div>
-                            <div class="course-eduction-data">
-                                <h6>Country Music Festival</h6>
-                                <p>Get ready for a boot-stompin' good time at the Country Music Festival in Nashville.
-                                    Experience live performances of your favorite country hits and enjoy the vibrant
-                                    atmosphere.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="course-eduction-padding">
-                        <div class="course-eduction-card">
-                            <div class="course-eduction-img">
-                                <img src="images/event2.png" alt="portfolio5">
-                            </div>
-                            <div class="course-eduction-data">
-                                <h6>Live Music Concert</h6>
-                                <p>Experience the magic of live music in the heart of New York City. This concert
-                                    features some of the most talented musicians performing your favorite songs. Get
-                                    ready for a night to remember!</p>
+            <div class="event-main">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="event-eduction-padding">
+                            <div class="event-eduction-card">
+                                <div class="event-eduction-img">
+                                    <img src="images/event1.png" alt="portfolio2">
+                                </div>
+                                <div class="event-eduction-data">
+                                    <h6>Country Music Festival</h6>
+                                    <p>Get ready for a boot-stompin' good time at the Country Music Festival in
+                                        Nashville.
+                                        Experience live performances of your favorite country hits and enjoy the vibrant
+                                        atmosphere.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="col-4">
+                        <div class="event-eduction-padding">
+                            <div class="event-eduction-card">
+                                <div class="event-eduction-img">
+                                    <img src="images/event2.png" alt="portfolio5">
+                                </div>
+                                <div class="event-eduction-data">
+                                    <h6>Live Music Concert</h6>
+                                    <p>Experience the magic of live music in the heart of New York City. This concert
+                                        features some of the most talented musicians performing your favorite songs. Get
+                                        ready for a night to remember!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                <div class="col-4">
-                    <div class="course-eduction-padding">
-                        <div class="course-eduction-card">
-                            <div class="course-eduction-img">
-                                <img src="images/event3.png" alt="portfolio6">
-                            </div>
-                            <div class="course-eduction-data">
-                                <h6>Outdoor This Games</h6>
-                                <p>Join us for a day of exciting outdoor activities and games in the beautiful Dhaka,
-                                    Bangladesh. Whether you're a student or just looking for some outdoor fun, this
-                                    event is perfect for you.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-4">
-                    <div class="course-eduction-padding">
-                        <div class="course-eduction-card">
-                            <div class="course-eduction-img">
-                                <img src="images/event4.png" alt="portfolio6">
-                            </div>
-                            <div class="course-eduction-data">
-                                <h6>Gourmet Food Festival</h6>
-                                <p>Calling all food lovers! Join us for a culinary adventure at the Paris Gourmet Food
-                                    Festival. Sample a diverse range of gourmet dishes from around the world and satisfy
-                                    your taste buds!</p>
+                    <div class="col-4">
+                        <div class="event-eduction-padding">
+                            <div class="event-eduction-card">
+                                <div class="event-eduction-img">
+                                    <img src="images/event3.png" alt="portfolio6">
+                                </div>
+                                <div class="event-eduction-data">
+                                    <h6>Outdoor This Games</h6>
+                                    <p>Join us for a day of exciting outdoor activities and games in the beautiful
+                                        Dhaka,
+                                        Bangladesh. Whether you're a student or just looking for some outdoor fun, this
+                                        event is perfect for you.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-4">
-                    <div class="course-eduction-padding">
-                        <div class="course-eduction-card">
-                            <div class="course-eduction-img">
-                                <img src="images/event5.png" alt="portfolio6">
-                            </div>
-                            <div class="course-eduction-data">
-                                <h6>Tech Innovators Conference</h6>
-                                <p>Tech enthusiasts, don't miss the Tech Innovators Conference in San Francisco. Dive
-                                    into discussions, network with industry experts, and gain
-                                    valuable insights.</p>
+                    <div class="col-4">
+                        <div class="event-eduction-padding">
+                            <div class="event-eduction-card">
+                                <div class="event-eduction-img">
+                                    <img src="images/event4.png" alt="portfolio6">
+                                </div>
+                                <div class="event-eduction-data">
+                                    <h6>Gourmet Food Festival</h6>
+                                    <p>Calling all food lovers! Join us for a culinary adventure at the Paris Gourmet
+                                        Food
+                                        Festival. Sample a diverse range of gourmet dishes from around the world and
+                                        satisfy
+                                        your taste buds!</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-4">
-                    <div class="course-eduction-padding">
-                        <div class="course-eduction-card">
-                            <div class="course-eduction-img">
-                                <img src="images/event6.png" alt="portfolio6">
+                    <div class="col-4">
+                        <div class="event-eduction-padding">
+                            <div class="event-eduction-card">
+                                <div class="event-eduction-img">
+                                    <img src="images/event5.png" alt="portfolio6">
+                                </div>
+                                <div class="event-eduction-data">
+                                    <h6>Tech Innovators Conference</h6>
+                                    <p>Tech enthusiasts, don't miss the Tech Innovators Conference in San Francisco.
+                                        Dive
+                                        into discussions, network with industry experts, and gain
+                                        valuable insights.</p>
+                                </div>
                             </div>
-                            <div class="course-eduction-data">
-                                <h6>Astronomy Workshop</h6>
-                                <p>Discover the mysteries of the cosmos at the Astronomy Workshop in Boston. Learn about
-                                    stars, planets, and galaxies, on the latest tech trends, and gaze at the night sky
-                                    through telescopes.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="event-eduction-padding">
+                            <div class="event-eduction-card">
+                                <div class="event-eduction-img">
+                                    <img src="images/event6.png" alt="portfolio6">
+                                </div>
+                                <div class="event-eduction-data">
+                                    <h6>Astronomy Workshop</h6>
+                                    <p>Discover the mysteries of the cosmos at the Astronomy Workshop in Boston. Learn
+                                        about
+                                        stars, planets, and galaxies, on the latest tech trends, and gaze at the night
+                                        sky
+                                        through telescopes.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -323,18 +331,18 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script>
-            var sidebar = document.getElementById("sidebar");
-            var sidebarToggleBtn = document.getElementById("sidebarToggleBtn");
-    
-            sidebarToggleBtn.addEventListener("click", function () {
-                sidebar.classList.toggle("show");
-            });
-        </script>
+    <script>
+        var sidebar = document.getElementById("sidebar");
+        var sidebarToggleBtn = document.getElementById("sidebarToggleBtn");
+
+        sidebarToggleBtn.addEventListener("click", function () {
+            sidebar.classList.toggle("show");
+        });
+    </script>
 
 </body>
 
