--- a/code/event.html
+++ b/code/event.html
@@ -209,7 +209,7 @@
                                     <p>Tech enthusiasts, don't miss the Tech Innovators Conference in San Francisco.
                                         Dive
                                         into discussions, network with industry experts, and gain
-                                        valuable insights.</p>
+                                        valuable insights. the Tech Innovators.</p>
                                 </div>
                             </div>
                         </div>
