--- a/code/index.html
+++ b/code/index.html
@@ -84,7 +84,7 @@
                     <li>
                         <a class="dropdown-item" href="courses.html">Courses</a>
                     </li>
-                    <li>
+                    <li class="border-none">
                         <a class="dropdown-item" href="javascript:void(0)">Courses Details</a>
                     </li>
                 </ul>
@@ -98,7 +98,7 @@
                     <li>
                         <a class="dropdown-item" href="event.html">Events</a>
                     </li>
-                    <li>
+                    <li class="border-none">
                         <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
                     </li>
                 </ul>
