--- a/code/event.html
+++ b/code/event.html
@@ -37,7 +37,7 @@
                                 <li>
                                     <a class="dropdown-item" href="courses.html">Courses</a>
                                 </li>
-                                <li>
+                                <li class="border-none">
                                     <a class="dropdown-item" href="javascript:void(0)">Courses Details</a>
                                 </li>
                             </ul>
@@ -51,7 +51,7 @@
                                 <li>
                                     <a class="dropdown-item" href="event.html">Events</a>
                                 </li>
-                                <li>
+                                <li class="border-none">
                                     <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
                                 </li>
                             </ul>
