--- a/code/courses.html
+++ b/code/courses.html
@@ -51,7 +51,7 @@
                                 <li>
                                     <a class="dropdown-item" href="event.html">Events</a>
                                 </li>
-                                <li>
+                                <li class="border-none">
                                     <a class="dropdown-item" href="javascript:void(0)">Events Details</a>
                                 </li>
                             </ul>
@@ -76,8 +76,8 @@
             </li>
 
             <li class="nav-item dropdown px-3">
-                <a class="nav-link dropdown-toggle" href="javascript:void(0)">Courses</a>
-                <ul class="dropdown-menu">
+                <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="dropdownBtn">Courses</a>
+                <ul class="dropdown-menu" id="dropdownContent">
                     <li>
                         <a class="dropdown-item" href="courses.html">Courses</a>
                     </li>
@@ -90,8 +90,8 @@
                 <a class="nav-link" href="javascript:void(0)">Short Codes</a>
             </li>
             <li class="nav-item dropdown px-3">
-                <a class="nav-link dropdown-toggle" href="javascript:void(0)">Events</a>
-                <ul class="dropdown-menu">
+                <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="dropdownBtn2">Events</a>
+                <ul class="dropdown-menu" id="dropdownContent2">
                     <li>
                         <a class="dropdown-item" href="event.html">Events</a>
                     </li>
@@ -322,6 +322,28 @@
 
         sidebarToggleBtn.addEventListener("click", function () {
             sidebar.classList.toggle("show");
+        });
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var dropdownBtn = document.getElementById("dropdownBtn");
+            var dropdownContent = document.getElementById("dropdownContent");
+
+            dropdownBtn.addEventListener("click", function () {
+                dropdownContent.style.display =
+                    dropdownContent.style.display === "block" ? "none" : "block";
+            });
+        });
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var dropdownBtn2 = document.getElementById("dropdownBtn2");
+            var dropdownContent2 = document.getElementById("dropdownContent2");
+
+            dropdownBtn2.addEventListener("click", function () {
+                dropdownContent2.style.display =
+                    dropdownContent2.style.display === "block" ? "none" : "block";
+            });
         });
     </script>
 </body>
